fixed some styling

--- a/flip-card-game/src/components/Gameboard.css
+++ b/flip-card-game/src/components/Gameboard.css
@@ -1,5 +1,6 @@
 .Gameboard {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
-  margin-top: 10px;
+  margin-top: 20px;
+  row-gap: 20px;
 }
